--- a/processing/01_build_dataset.ipynb
+++ b/processing/01_build_dataset.ipynb
@@ -11,34 +11,68 @@
     "import torch\n",
     "from PIL import Image\n",
     "from torch.utils.data import Dataset\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "\n",
+    "datasample_example={\n",
+    "    \"dataset\":\"SumMe\",\n",
+    "    \"video\":\"Air_Force_One\",\n",
+    "    \"images\":[\n",
+    "        \"video1/frame1.jpg\",\n",
+    "        \"video1/frame1.jpg\",\n",
+    "        \"video1/frame1.jpg\",\n",
+    "        \"video1/frame1.jpg\",\n",
+    "        \"video1/frame1.jpg\", \n",
+    "    ],\n",
+    "    \"conversation\":{\n",
+    "      \"role\": \"user\",\n",
+    "      \"content\": [\n",
+    "          {\"type\": \"text\", \"text\": \"What is shown in this image?\"},\n",
+    "          {\"type\": \"image\"},\n",
+    "          {\"type\": \"image\"},\n",
+    "          {\"type\": \"image\"},\n",
+    "          {\"type\": \"image\"},\n",
+    "          {\"type\": \"image\"},\n",
+    "        ],\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "result_example={\n",
+    "    \"dataset\":\"SumMe\",\n",
+    "    \"video\":\"Air_Force_One\",\n",
+    "    \"images\":[\n",
+    "        \"video1/frame1.jpg\",\n",
+    "        \"video1/frame1.jpg\",\n",
+    "        \"video1/frame1.jpg\",\n",
+    "        \"video1/frame1.jpg\",\n",
+    "        \"video1/frame1.jpg\", \n",
+    "    ],\n",
+    "    \"conversation\":{\n",
+    "      \"role\": \"user\",\n",
+    "      \"content\": [\n",
+    "          {\"type\": \"text\", \"text\": \"What is shown in this image?\"},\n",
+    "          {\"type\": \"image\"},\n",
+    "          {\"type\": \"image\"},\n",
+    "          {\"type\": \"image\"},\n",
+    "          {\"type\": \"image\"},\n",
+    "          {\"type\": \"image\"},\n",
+    "        ],\n",
+    "    },\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。\n",
-      "\u001b[1;31m请查看单元格中的代码，以确定故障的可能原因。\n",
-      "\u001b[1;31m单击<a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>了解详细信息。\n",
-      "\u001b[1;31m有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
-     ]
-    }
-   ],
-   "source": [
-    "data_dir = Path(\"/root/autodl-tmp/datasets--liuhaotian--LLaVA-CC3M-Pretrain-595K\")\n",
-    "\n",
-    "chat_file = Path(data_dir, \"chat.json\")\n",
-    "\n",
-    "chat_data = pd.read_json(chat_file)\n",
-    "chat_data.shape\n"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -57,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
