--- a/processing/test.ipynb
+++ b/processing/test.ipynb
@@ -14,7 +14,7 @@
     "processor = LlavaNextProcessor.from_pretrained(\"llava-hf/llava-v1.6-vicuna-13b-hf\")\n",
     "\n",
     "model = LlavaNextForConditionalGeneration.from_pretrained(\"llava-hf/llava-v1.6-vicuna-13b-hf\", torch_dtype=torch.float16, low_cpu_mem_usage=True) \n",
-    "model.to(\"cuda:0\")\n",
+    "# model.to(\"cuda:0\")\n",
     "\n",
     "# prepare image and text prompt, using the appropriate prompt template\n",
     "url = \"https://github.com/haotian-liu/LLaVA/blob/1a91fc274d7c35a9b50b3cb29c4247ae5837ce39/images/llava_v1_5_radar.jpg?raw=true\"\n",
@@ -24,22 +24,23 @@
     "# Each value in \"content\" has to be a list of dicts with types (\"text\", \"image\") \n",
     "conversation = [\n",
     "    {\n",
-    "\n",
     "      \"role\": \"user\",\n",
     "      \"content\": [\n",
     "          {\"type\": \"text\", \"text\": \"What is shown in this image?\"},\n",
     "          {\"type\": \"image\"},\n",
+    "          # {\"type\": \"image\"},\n",
     "        ],\n",
     "    },\n",
     "]\n",
     "prompt = processor.apply_chat_template(conversation, add_generation_prompt=True)\n",
+    "inputs = processor(images=image, text=prompt, return_tensors=\"pt\")\n",
     "\n",
-    "inputs = processor(images=image, text=prompt, return_tensors=\"pt\").to(\"cuda:0\")\n",
-    "\n",
+    "# inputs.pixel_values.shape\n",
     "# autoregressively complete prompt\n",
     "output = model.generate(**inputs, max_new_tokens=100)\n",
     "\n",
-    "print(processor.decode(output[0], skip_special_tokens=True))"
+    "print(processor.decode(output[0], skip_special_tokens=True))\n",
+    "output"
    ]
   }
  ],
@@ -59,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
