--- a/processing/test.ipynb
+++ b/processing/test.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/insight/miniconda3/envs/TFVSN/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import LlavaNextProcessor, LlavaNextForConditionalGeneration\n",
     "import torch\n",
@@ -23,17 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some kwargs in processor config are unused and will not have any effect: num_additional_image_tokens. \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "processor = LlavaNextProcessor.from_pretrained(\"llava-hf/llava-v1.6-vicuna-13b-hf\")\n",
     "# model = LlavaNextForConditionalGeneration.from_pretrained(\"llava-hf/llava-v1.6-vicuna-13b-hf\", torch_dtype=torch.float16, low_cpu_mem_usage=True) \n",
@@ -42,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +156,7 @@
        "           [-1.4802, -1.4802, -1.4802,  ..., -1.4802, -1.4802, -1.4802]]]]]), 'image_sizes': tensor([[ 899, 1024]])}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +164,8 @@
    "source": [
     "# prepare image and text prompt, using the appropriate prompt template\n",
     "url = \"https://github.com/haotian-liu/LLaVA/blob/1a91fc274d7c35a9b50b3cb29c4247ae5837ce39/images/llava_v1_5_radar.jpg?raw=true\"\n",
-    "image = Image.open(requests.get(url, stream=True).raw)\n",
+    "# image = Image.open(requests.get(url, stream=True).raw)\n",
+    "image = Image.open(\"/home/insight/workspace/TFVSN/llava_v1_5_radar.jpg\")\n",
     "# Define a chat histiry and use `apply_chat_template` to get correctly formatted prompt\n",
     "# Each value in \"content\" has to be a list of dicts with types (\"text\", \"image\") \n",
     "conversation = [\n",
