--- a/processing/test.ipynb
+++ b/processing/test.ipynb
@@ -2,197 +2,178 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/miniconda3/envs/myenv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import LlavaNextProcessor, LlavaNextForConditionalGeneration\n",
     "import torch\n",
     "from PIL import Image\n",
-    "import requests"
+    "import requests\n",
+    "from transformers import AutoProcessor, AutoModelForCausalLM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "processor = LlavaNextProcessor.from_pretrained(\"llava-hf/llava-v1.6-vicuna-13b-hf\")\n",
-    "# model = LlavaNextForConditionalGeneration.from_pretrained(\"llava-hf/llava-v1.6-vicuna-13b-hf\", torch_dtype=torch.float16, low_cpu_mem_usage=True) \n",
-    "# model.to(\"cuda:0\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some kwargs in processor config are unused and will not have any effect: num_additional_image_tokens. \n",
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:00<00:00,  8.66it/s]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'input_ids': tensor([[    1,  3148,  1001,  ...,  9047, 13566, 29901]]), 'attention_mask': tensor([[1, 1, 1,  ..., 1, 1, 1]]), 'pixel_values': tensor([[[[[ 1.9303,  1.9303,  1.9303,  ...,  1.9303,  1.9303,  1.9303],\n",
-       "           [ 1.9303,  1.9303,  1.9303,  ...,  1.9303,  1.9303,  1.9303],\n",
-       "           [ 1.9303,  1.9303,  1.9303,  ...,  1.9303,  1.9303,  1.9303],\n",
-       "           ...,\n",
-       "           [ 1.9303,  1.9303,  1.9303,  ...,  1.9303,  1.9303,  1.9303],\n",
-       "           [ 1.9303,  1.9303,  1.9303,  ...,  1.9303,  1.9303,  1.9303],\n",
-       "           [ 1.9303,  1.9303,  1.9303,  ...,  1.9303,  1.9303,  1.9303]],\n",
-       "\n",
-       "          [[ 2.0749,  2.0749,  2.0749,  ...,  2.0749,  2.0749,  2.0749],\n",
-       "           [ 2.0749,  2.0749,  2.0749,  ...,  2.0749,  2.0749,  2.0749],\n",
-       "           [ 2.0749,  2.0749,  2.0749,  ...,  2.0749,  2.0749,  2.0749],\n",
-       "           ...,\n",
-       "           [ 2.0749,  2.0749,  2.0749,  ...,  2.0749,  2.0749,  2.0749],\n",
-       "           [ 2.0749,  2.0749,  2.0749,  ...,  2.0749,  2.0749,  2.0749],\n",
-       "           [ 2.0749,  2.0749,  2.0749,  ...,  2.0749,  2.0749,  2.0749]],\n",
-       "\n",
-       "          [[ 2.1459,  2.1459,  2.1459,  ...,  2.1459,  2.1459,  2.1459],\n",
-       "           [ 2.1459,  2.1459,  2.1459,  ...,  2.1459,  2.1459,  2.1459],\n",
-       "           [ 2.1459,  2.1459,  2.1459,  ...,  2.1459,  2.1459,  2.1459],\n",
-       "           ...,\n",
-       "           [ 2.1459,  2.1459,  2.1459,  ...,  2.1459,  2.1459,  2.1459],\n",
-       "           [ 2.1459,  2.1459,  2.1459,  ...,  2.1459,  2.1459,  2.1459],\n",
-       "           [ 2.1459,  2.1459,  2.1459,  ...,  2.1459,  2.1459,  2.1459]]],\n",
-       "\n",
-       "\n",
-       "         [[[-1.7923, -1.7923, -1.7923,  ..., -1.7923, -1.7923, -1.7923],\n",
-       "           [-1.7923, -1.7923, -1.7923,  ..., -1.7923, -1.7923, -1.7923],\n",
-       "           [-1.7923, -1.7923, -1.7923,  ..., -1.7923, -1.7923, -1.7923],\n",
-       "           ...,\n",
-       "           [ 1.8865,  1.8865, -0.1426,  ...,  0.7917,  0.7187,  0.7625],\n",
-       "           [ 1.8865,  1.9011,  1.6676,  ...,  0.7917,  0.7187,  0.7187],\n",
-       "           [ 1.8865,  1.8427,  1.9303,  ...,  0.8792,  0.9668,  0.9668]],\n",
-       "\n",
-       "          [[-1.7521, -1.7521, -1.7521,  ..., -1.7521, -1.7521, -1.7521],\n",
-       "           [-1.7521, -1.7521, -1.7521,  ..., -1.7521, -1.7521, -1.7521],\n",
-       "           [-1.7521, -1.7521, -1.7521,  ..., -1.7521, -1.7521, -1.7521],\n",
-       "           ...,\n",
-       "           [ 2.0299,  2.0299, -0.0562,  ...,  0.9493,  0.8743,  0.9493],\n",
-       "           [ 2.0299,  2.0449,  1.8047,  ...,  0.9493,  0.8893,  0.8743],\n",
-       "           [ 2.0299,  1.9848,  2.0749,  ...,  0.7692,  0.7692,  0.7242]],\n",
-       "\n",
-       "          [[-1.4802, -1.4802, -1.4802,  ..., -1.4802, -1.4802, -1.4802],\n",
-       "           [-1.4802, -1.4802, -1.4802,  ..., -1.4802, -1.4802, -1.4802],\n",
-       "           [-1.4802, -1.4802, -1.4802,  ..., -1.4802, -1.4802, -1.4802],\n",
-       "           ...,\n",
-       "           [ 2.1032,  2.1032,  0.1266,  ...,  1.0367,  0.9941,  1.0510],\n",
-       "           [ 2.1032,  2.1175,  1.8899,  ...,  1.0794,  1.0510,  1.0652],\n",
-       "           [ 2.1032,  2.0606,  2.1459,  ...,  1.0510,  1.2358,  1.2785]]],\n",
-       "\n",
-       "\n",
-       "         [[[-1.7923, -1.7923, -1.7923,  ..., -1.7923, -1.7923, -1.7923],\n",
-       "           [-1.7923, -1.7923, -1.7923,  ..., -1.7923, -1.7923, -1.7923],\n",
-       "           [-1.7923, -1.7923, -1.7923,  ..., -1.7923, -1.7923, -1.7923],\n",
-       "           ...,\n",
-       "           [ 0.7333,  0.9230,  0.9668,  ...,  1.9303,  1.9303,  1.9303],\n",
-       "           [ 0.7917,  0.8938,  1.0690,  ...,  1.9303,  1.9303,  1.9303],\n",
-       "           [ 0.8792,  0.8938,  0.8792,  ...,  1.9303,  1.9303,  1.9303]],\n",
-       "\n",
-       "          [[-1.7521, -1.7521, -1.7521,  ..., -1.7521, -1.7521, -1.7521],\n",
-       "           [-1.7521, -1.7521, -1.7521,  ..., -1.7521, -1.7521, -1.7521],\n",
-       "           [-1.7521, -1.7521, -1.7521,  ..., -1.7521, -1.7521, -1.7521],\n",
-       "           ...,\n",
-       "           [ 0.9643,  1.0093,  0.8893,  ...,  2.0749,  2.0749,  2.0749],\n",
-       "           [ 0.8743,  0.9043,  0.9493,  ...,  2.0749,  2.0749,  2.0749],\n",
-       "           [ 0.8442,  0.9193,  0.9643,  ...,  2.0749,  2.0749,  2.0749]],\n",
-       "\n",
-       "          [[-1.4802, -1.4802, -1.4802,  ..., -1.4802, -1.4802, -1.4802],\n",
-       "           [-1.4802, -1.4802, -1.4802,  ..., -1.4802, -1.4802, -1.4802],\n",
-       "           [-1.4802, -1.4802, -1.4802,  ..., -1.4802, -1.4802, -1.4802],\n",
-       "           ...,\n",
-       "           [ 1.0936,  1.0225,  0.7808,  ...,  2.1459,  2.1459,  2.1459],\n",
-       "           [ 1.0652,  0.9088,  0.6670,  ...,  2.1459,  2.1459,  2.1459],\n",
-       "           [ 0.9799,  1.0083,  1.0367,  ...,  2.1459,  2.1459,  2.1459]]],\n",
-       "\n",
-       "\n",
-       "         [[[ 1.8719,  1.9011,  1.8135,  ...,  0.7187,  0.7625,  0.7625],\n",
-       "           [ 1.8573,  1.9011,  1.9303,  ...,  0.6749,  0.6165,  0.6019],\n",
-       "           [ 1.9157,  1.7114,  0.1931,  ...,  0.8355,  0.7625,  0.7771],\n",
-       "           ...,\n",
-       "           [-1.7923, -1.7923, -1.7923,  ..., -1.7923, -1.7923, -1.7923],\n",
-       "           [-1.7923, -1.7923, -1.7923,  ..., -1.7923, -1.7923, -1.7923],\n",
-       "           [-1.7923, -1.7923, -1.7923,  ..., -1.7923, -1.7923, -1.7923]],\n",
-       "\n",
-       "          [[ 2.0149,  2.0449,  1.9548,  ...,  0.8743,  0.8893,  0.8893],\n",
-       "           [ 1.9998,  2.0449,  2.0749,  ...,  0.9643,  1.0093,  1.0393],\n",
-       "           [ 2.0599,  1.8498,  0.2890,  ...,  0.9343,  0.9643,  1.0093],\n",
-       "           ...,\n",
-       "           [-1.7521, -1.7521, -1.7521,  ..., -1.7521, -1.7521, -1.7521],\n",
-       "           [-1.7521, -1.7521, -1.7521,  ..., -1.7521, -1.7521, -1.7521],\n",
-       "           [-1.7521, -1.7521, -1.7521,  ..., -1.7521, -1.7521, -1.7521]],\n",
-       "\n",
-       "          [[ 2.0890,  2.1175,  2.0321,  ...,  0.9372,  1.0510,  1.0794],\n",
-       "           [ 2.0748,  2.1175,  2.1459,  ...,  0.8519,  0.8519,  0.8234],\n",
-       "           [ 2.1317,  1.9326,  0.4537,  ...,  0.9088,  0.8519,  0.8377],\n",
-       "           ...,\n",
-       "           [-1.4802, -1.4802, -1.4802,  ..., -1.4802, -1.4802, -1.4802],\n",
-       "           [-1.4802, -1.4802, -1.4802,  ..., -1.4802, -1.4802, -1.4802],\n",
-       "           [-1.4802, -1.4802, -1.4802,  ..., -1.4802, -1.4802, -1.4802]]],\n",
-       "\n",
-       "\n",
-       "         [[[ 0.8501,  0.7917,  0.8063,  ...,  1.9303,  1.9303,  1.9303],\n",
-       "           [ 0.8355,  0.8209,  0.8063,  ...,  1.9303,  1.9303,  1.9303],\n",
-       "           [ 0.8501,  0.8792,  0.8063,  ...,  1.9303,  1.9303,  1.9303],\n",
-       "           ...,\n",
-       "           [-1.7923, -1.7923, -1.7923,  ..., -1.7923, -1.7923, -1.7923],\n",
-       "           [-1.7923, -1.7923, -1.7923,  ..., -1.7923, -1.7923, -1.7923],\n",
-       "           [-1.7923, -1.7923, -1.7923,  ..., -1.7923, -1.7923, -1.7923]],\n",
-       "\n",
-       "          [[ 0.8593,  0.8743,  0.9493,  ...,  2.0749,  2.0749,  2.0749],\n",
-       "           [ 0.9193,  0.9343,  1.0093,  ...,  2.0749,  2.0749,  2.0749],\n",
-       "           [ 0.9043,  0.9643,  0.9493,  ...,  2.0749,  2.0749,  2.0749],\n",
-       "           ...,\n",
-       "           [-1.7521, -1.7521, -1.7521,  ..., -1.7521, -1.7521, -1.7521],\n",
-       "           [-1.7521, -1.7521, -1.7521,  ..., -1.7521, -1.7521, -1.7521],\n",
-       "           [-1.7521, -1.7521, -1.7521,  ..., -1.7521, -1.7521, -1.7521]],\n",
-       "\n",
-       "          [[ 0.9088,  0.9230,  0.9941,  ...,  2.1459,  2.1459,  2.1459],\n",
-       "           [ 0.8803,  0.8945,  0.9656,  ...,  2.1459,  2.1459,  2.1459],\n",
-       "           [ 0.8519,  0.9230,  0.9088,  ...,  2.1459,  2.1459,  2.1459],\n",
-       "           ...,\n",
-       "           [-1.4802, -1.4802, -1.4802,  ..., -1.4802, -1.4802, -1.4802],\n",
-       "           [-1.4802, -1.4802, -1.4802,  ..., -1.4802, -1.4802, -1.4802],\n",
-       "           [-1.4802, -1.4802, -1.4802,  ..., -1.4802, -1.4802, -1.4802]]]]]), 'image_sizes': tensor([[ 899, 1024]])}"
+       "LlavaNextForConditionalGeneration(\n",
+       "  (vision_tower): CLIPVisionModel(\n",
+       "    (vision_model): CLIPVisionTransformer(\n",
+       "      (embeddings): CLIPVisionEmbeddings(\n",
+       "        (patch_embedding): Conv2d(3, 1024, kernel_size=(14, 14), stride=(14, 14), bias=False)\n",
+       "        (position_embedding): Embedding(577, 1024)\n",
+       "      )\n",
+       "      (pre_layrnorm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "      (encoder): CLIPEncoder(\n",
+       "        (layers): ModuleList(\n",
+       "          (0-23): 24 x CLIPEncoderLayer(\n",
+       "            (self_attn): CLIPSdpaAttention(\n",
+       "              (k_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "              (v_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "              (q_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "              (out_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "            )\n",
+       "            (layer_norm1): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "            (mlp): CLIPMLP(\n",
+       "              (activation_fn): QuickGELUActivation()\n",
+       "              (fc1): Linear(in_features=1024, out_features=4096, bias=True)\n",
+       "              (fc2): Linear(in_features=4096, out_features=1024, bias=True)\n",
+       "            )\n",
+       "            (layer_norm2): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (post_layernorm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (multi_modal_projector): LlavaNextMultiModalProjector(\n",
+       "    (linear_1): Linear(in_features=1024, out_features=4096, bias=True)\n",
+       "    (act): GELUActivation()\n",
+       "    (linear_2): Linear(in_features=4096, out_features=4096, bias=True)\n",
+       "  )\n",
+       "  (language_model): MistralForCausalLM(\n",
+       "    (model): MistralModel(\n",
+       "      (embed_tokens): Embedding(32064, 4096)\n",
+       "      (layers): ModuleList(\n",
+       "        (0-31): 32 x MistralDecoderLayer(\n",
+       "          (self_attn): MistralSdpaAttention(\n",
+       "            (q_proj): Linear(in_features=4096, out_features=4096, bias=False)\n",
+       "            (k_proj): Linear(in_features=4096, out_features=1024, bias=False)\n",
+       "            (v_proj): Linear(in_features=4096, out_features=1024, bias=False)\n",
+       "            (o_proj): Linear(in_features=4096, out_features=4096, bias=False)\n",
+       "            (rotary_emb): MistralRotaryEmbedding()\n",
+       "          )\n",
+       "          (mlp): MistralMLP(\n",
+       "            (gate_proj): Linear(in_features=4096, out_features=14336, bias=False)\n",
+       "            (up_proj): Linear(in_features=4096, out_features=14336, bias=False)\n",
+       "            (down_proj): Linear(in_features=14336, out_features=4096, bias=False)\n",
+       "            (act_fn): SiLU()\n",
+       "          )\n",
+       "          (input_layernorm): MistralRMSNorm((4096,), eps=1e-05)\n",
+       "          (post_attention_layernorm): MistralRMSNorm((4096,), eps=1e-05)\n",
+       "        )\n",
+       "      )\n",
+       "      (norm): MistralRMSNorm((4096,), eps=1e-05)\n",
+       "    )\n",
+       "    (lm_head): Linear(in_features=4096, out_features=32064, bias=False)\n",
+       "  )\n",
+       ")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "processor = LlavaNextProcessor.from_pretrained(\"llava-hf/llava-v1.6-mistral-7b-hf\")\n",
+    "model = LlavaNextForConditionalGeneration.from_pretrained(\"llava-hf/llava-v1.6-mistral-7b-hf\", torch_dtype=torch.float16, low_cpu_mem_usage=True) \n",
+    "model.to(\"cuda:0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:None for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INST]  \n",
+      " \n",
+      "i will give you two images, describe them invided\n",
+      " [/INST] The image you've provided appears to be a colorful, stylized illustration of a forest scene with a large, friendly-looking bear at the center. The bear is depicted with a warm, inviting expression, and it's surrounded by smaller, cartoonish animals that seem to be enjoying the bear's company. The animals are various types, including birds and a small mammal, and they are scattered around the bear, some perched on its back and others standing on the ground.\n",
+      "\n",
+      "The forest is depicted with a variety of trees and foliage, and the colors are vibrant, with a mix of blues, greens, and warm oranges, suggesting either dawn or dusk. The sky is a soft gradient of pink and orange hues, which adds to the serene and magical atmosphere of the scene.\n",
+      "\n",
+      "The image is rich in detail and has a whimsical, storybook quality to it. It's a charming and imaginative depiction that could be used for a children's book, a poster, or as a piece of art for a forest-themed setting. \n"
+     ]
+    }
+   ],
+   "source": [
     "# prepare image and text prompt, using the appropriate prompt template\n",
-    "url = \"https://github.com/haotian-liu/LLaVA/blob/1a91fc274d7c35a9b50b3cb29c4247ae5837ce39/images/llava_v1_5_radar.jpg?raw=true\"\n",
+    "# url = \"https://github.com/haotian-liu/LLaVA/blob/1a91fc274d7c35a9b50b3cb29c4247ae5837ce39/images/llava_v1_5_radar.jpg?raw=true\"\n",
     "# image = Image.open(requests.get(url, stream=True).raw)\n",
-    "image = Image.open(\"/home/insight/workspace/TFVSN/llava_v1_5_radar.jpg\")\n",
+    "image1 = Image.open(\"/root/TFVSN/test_images/test4.jpg\")\n",
+    "image2 = Image.open(\"/root/TFVSN/test_images/test2.jpg\")\n",
+    "\n",
     "# Define a chat histiry and use `apply_chat_template` to get correctly formatted prompt\n",
     "# Each value in \"content\" has to be a list of dicts with types (\"text\", \"image\") \n",
     "conversation = [\n",
     "    {\n",
     "      \"role\": \"user\",\n",
     "      \"content\": [\n",
-    "          {\"type\": \"text\", \"text\": \"What is shown in this image?\"},\n",
+    "          {\"type\": \"text\", \"text\": \"describe the 2nd picture\\n\"},\n",
     "          {\"type\": \"image\"},\n",
-    "          # {\"type\": \"image\"},\n",
+    "          {\"type\": \"image\"},\n",
     "        ],\n",
     "    },\n",
     "]\n",
     "prompt = processor.apply_chat_template(conversation, add_generation_prompt=True)\n",
-    "inputs = processor(images=image, text=prompt, return_tensors=\"pt\")\n",
+    "inputs = processor(images=[image1, image2], text=prompt, return_tensors=\"pt\").to(\"cuda:0\")\n",
     "inputs\n",
     "# inputs.pixel_values.shape\n",
     "# autoregressively complete prompt\n",
-    "# output = model.generate(**inputs, max_new_tokens=100)\n",
+    "output = model.generate(**inputs, max_new_tokens=1000)\n",
     "\n",
-    "# print(processor.decode(output[0], skip_special_tokens=True))\n",
+    "print(processor.decode(output[0], skip_special_tokens=True))\n",
     "# output"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TFVSN",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -206,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
