--- a/processing/test.ipynb
+++ b/processing/test.ipynb
@@ -32,97 +32,27 @@
      "output_type": "stream",
      "text": [
       "Some kwargs in processor config are unused and will not have any effect: num_additional_image_tokens. \n",
-      "Loading checkpoint shards: 100%|██████████| 4/4 [00:00<00:00,  8.66it/s]\n"
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:00<00:00, 11.97it/s]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "LlavaNextForConditionalGeneration(\n",
-       "  (vision_tower): CLIPVisionModel(\n",
-       "    (vision_model): CLIPVisionTransformer(\n",
-       "      (embeddings): CLIPVisionEmbeddings(\n",
-       "        (patch_embedding): Conv2d(3, 1024, kernel_size=(14, 14), stride=(14, 14), bias=False)\n",
-       "        (position_embedding): Embedding(577, 1024)\n",
-       "      )\n",
-       "      (pre_layrnorm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
-       "      (encoder): CLIPEncoder(\n",
-       "        (layers): ModuleList(\n",
-       "          (0-23): 24 x CLIPEncoderLayer(\n",
-       "            (self_attn): CLIPSdpaAttention(\n",
-       "              (k_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "              (v_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "              (q_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "              (out_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
-       "            )\n",
-       "            (layer_norm1): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
-       "            (mlp): CLIPMLP(\n",
-       "              (activation_fn): QuickGELUActivation()\n",
-       "              (fc1): Linear(in_features=1024, out_features=4096, bias=True)\n",
-       "              (fc2): Linear(in_features=4096, out_features=1024, bias=True)\n",
-       "            )\n",
-       "            (layer_norm2): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (post_layernorm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
-       "    )\n",
-       "  )\n",
-       "  (multi_modal_projector): LlavaNextMultiModalProjector(\n",
-       "    (linear_1): Linear(in_features=1024, out_features=4096, bias=True)\n",
-       "    (act): GELUActivation()\n",
-       "    (linear_2): Linear(in_features=4096, out_features=4096, bias=True)\n",
-       "  )\n",
-       "  (language_model): MistralForCausalLM(\n",
-       "    (model): MistralModel(\n",
-       "      (embed_tokens): Embedding(32064, 4096)\n",
-       "      (layers): ModuleList(\n",
-       "        (0-31): 32 x MistralDecoderLayer(\n",
-       "          (self_attn): MistralSdpaAttention(\n",
-       "            (q_proj): Linear(in_features=4096, out_features=4096, bias=False)\n",
-       "            (k_proj): Linear(in_features=4096, out_features=1024, bias=False)\n",
-       "            (v_proj): Linear(in_features=4096, out_features=1024, bias=False)\n",
-       "            (o_proj): Linear(in_features=4096, out_features=4096, bias=False)\n",
-       "            (rotary_emb): MistralRotaryEmbedding()\n",
-       "          )\n",
-       "          (mlp): MistralMLP(\n",
-       "            (gate_proj): Linear(in_features=4096, out_features=14336, bias=False)\n",
-       "            (up_proj): Linear(in_features=4096, out_features=14336, bias=False)\n",
-       "            (down_proj): Linear(in_features=14336, out_features=4096, bias=False)\n",
-       "            (act_fn): SiLU()\n",
-       "          )\n",
-       "          (input_layernorm): MistralRMSNorm((4096,), eps=1e-05)\n",
-       "          (post_attention_layernorm): MistralRMSNorm((4096,), eps=1e-05)\n",
-       "        )\n",
-       "      )\n",
-       "      (norm): MistralRMSNorm((4096,), eps=1e-05)\n",
-       "    )\n",
-       "    (lm_head): Linear(in_features=4096, out_features=32064, bias=False)\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "processor = LlavaNextProcessor.from_pretrained(\"llava-hf/llava-v1.6-mistral-7b-hf\")\n",
-    "model = LlavaNextForConditionalGeneration.from_pretrained(\"llava-hf/llava-v1.6-mistral-7b-hf\", torch_dtype=torch.float16, low_cpu_mem_usage=True) \n",
-    "model.to(\"cuda:0\")"
+    "model = LlavaNextForConditionalGeneration.from_pretrained(\"llava-hf/llava-v1.6-mistral-7b-hf\", torch_dtype=torch.float16, low_cpu_mem_usage=True).to(\"cuda:0\")\n",
+    "# model.to(\"cuda:0\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Setting `pad_token_id` to `eos_token_id`:None for open-end generation.\n"
+      "Setting `pad_token_id` to `eos_token_id`:None for open-end generation.\n",
+      "Expanding inputs for image tokens in LLaVa-NeXT should be done in processing. Please add `patch_size` and `vision_feature_select_strategy` to the model's processing config or set directly with `processor.patch_size = {{patch_size}}` and processor.vision_feature_select_strategy = {{vision_feature_select_strategy}}`. Using processors without these attributes in the config is deprecated and will throw an error in v4.47.\n"
      ]
     },
     {
@@ -131,12 +61,12 @@
      "text": [
       "[INST]  \n",
       " \n",
-      "i will give you two images, describe them invided\n",
-      " [/INST] The image you've provided appears to be a colorful, stylized illustration of a forest scene with a large, friendly-looking bear at the center. The bear is depicted with a warm, inviting expression, and it's surrounded by smaller, cartoonish animals that seem to be enjoying the bear's company. The animals are various types, including birds and a small mammal, and they are scattered around the bear, some perched on its back and others standing on the ground.\n",
+      "describe the 2nd picture\n",
+      " [/INST] The image appears to be a stylized, colorful illustration of a bear standing in a forest clearing with a group of smaller animals around it. The bear is depicted with a friendly expression, and it's wearing a scarf. The smaller animals are various types, including what looks like a bird, a rabbit, and a squirrel, all of which are standing close to the bear.\n",
       "\n",
-      "The forest is depicted with a variety of trees and foliage, and the colors are vibrant, with a mix of blues, greens, and warm oranges, suggesting either dawn or dusk. The sky is a soft gradient of pink and orange hues, which adds to the serene and magical atmosphere of the scene.\n",
+      "The background features a gradient of colors, transitioning from a warm orange at the horizon to a cool blue at the top, suggesting either sunrise or sunset. The trees are depicted with a mix of green and blue hues, giving the impression of a serene, possibly magical forest.\n",
       "\n",
-      "The image is rich in detail and has a whimsical, storybook quality to it. It's a charming and imaginative depiction that could be used for a children's book, a poster, or as a piece of art for a forest-themed setting. \n"
+      "The image is annotated with various labels and numbers, indicating some sort of data or performance metrics. These labels include \"MMM-Vet,\" \"MMM-Bench,\" \"MMM-TextVQA,\" \"MMM-SQA-IMG,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM\n"
      ]
     }
    ],
